--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ex_lab-09-7-sigmoid_back_prop\n"
+    "# [ ex_lab-09-7-sigmoid_back_prop ]\n"
    ]
   },
   {
@@ -24,13 +24,24 @@
     "\n",
     "# [Network Architecture]\n",
     "\n",
-    ">\\begin{aligned}\n",
-    "  Input: x  \\\\\n",
-    "  Layer1: {x}{W} + b \\\\\n",
-    "  Output\\:layer = {\\sigma}{(Layer1)} \\\\\n",
-    "  Loss\\_i &= - y * log(\\sigma(Layer1)) - (1 - y) * log(1 - {\\sigma}{(Layer1)}) \\\\\n",
-    "  Loss &= tf.reduce\\_sum(Loss\\_i)\n",
-    " \\end{aligned}\n",
+    ">\\begin{aligned} \n",
+    "   Input: x  \\\\\n",
+    "   \\end{aligned}\n",
+    "   \\begin{aligned}\n",
+    "      Layer1: {x}{W} + b \\\\\n",
+    "   \\end{aligned}\n",
+    "   \\begin{aligned}\n",
+    "      Output\\:layer = {\\sigma}{(Layer1)} \\\\\n",
+    "   \\end{aligned}\n",
+    "   \\begin{aligned}\n",
+    "      Loss\\_i &= - y * log(\\sigma(Layer1)) - (1 - y) * log(1 - {\\sigma}{(Layer1)}) \\\\\n",
+    "   \\end{aligned}\n",
+    "   \\begin{aligned}\n",
+    "      Loss &= tf.reduce\\_sum(Loss\\_i)\n",
+    "   \\end{aligned}\n",
+    "  \n",
+    "  \n",
+    "\n",
     " \n",
     " We want to compute that  \n",
     " >\\begin{aligned}\n",
@@ -43,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -96,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -119,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -238,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -260,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -281,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -302,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -349,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -395,63 +406,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:     0\t Loss:  622.77124\t Acc: 37.62%\n",
-      "Step:    10\t Loss:  134.19913\t Acc: 80.20%\n",
-      "Step:    20\t Loss:   84.24376\t Acc: 91.09%\n",
-      "Step:    30\t Loss:   66.77851\t Acc: 92.08%\n",
-      "Step:    40\t Loss:   57.17104\t Acc: 93.07%\n",
-      "Step:    50\t Loss:   50.46732\t Acc: 95.05%\n",
-      "Step:    60\t Loss:   45.43508\t Acc: 95.05%\n",
-      "Step:    70\t Loss:   41.49651\t Acc: 95.05%\n",
-      "Step:    80\t Loss:   38.31973\t Acc: 95.05%\n",
-      "Step:    90\t Loss:   35.69547\t Acc: 97.03%\n",
-      "Step:   100\t Loss:   33.48457\t Acc: 97.03%\n",
-      "Step:   110\t Loss:   31.59102\t Acc: 98.02%\n",
-      "Step:   120\t Loss:   29.94665\t Acc: 100.00%\n",
-      "Step:   130\t Loss:   28.50175\t Acc: 100.00%\n",
-      "Step:   140\t Loss:   27.21925\t Acc: 100.00%\n",
-      "Step:   150\t Loss:   26.07095\t Acc: 100.00%\n",
-      "Step:   160\t Loss:   25.03497\t Acc: 100.00%\n",
-      "Step:   170\t Loss:   24.09410\t Acc: 100.00%\n",
-      "Step:   180\t Loss:   23.23459\t Acc: 100.00%\n",
-      "Step:   190\t Loss:   22.44529\t Acc: 100.00%\n",
-      "Step:   200\t Loss:   21.71711\t Acc: 100.00%\n",
-      "Step:   210\t Loss:   21.04250\t Acc: 100.00%\n",
-      "Step:   220\t Loss:   20.41517\t Acc: 100.00%\n",
-      "Step:   230\t Loss:   19.82984\t Acc: 100.00%\n",
-      "Step:   240\t Loss:   19.28199\t Acc: 100.00%\n",
-      "Step:   250\t Loss:   18.76780\t Acc: 100.00%\n",
-      "Step:   260\t Loss:   18.28395\t Acc: 100.00%\n",
-      "Step:   270\t Loss:   17.82759\t Acc: 100.00%\n",
-      "Step:   280\t Loss:   17.39622\t Acc: 100.00%\n",
-      "Step:   290\t Loss:   16.98766\t Acc: 100.00%\n",
-      "Step:   300\t Loss:   16.59999\t Acc: 100.00%\n",
-      "Step:   310\t Loss:   16.23152\t Acc: 100.00%\n",
-      "Step:   320\t Loss:   15.88073\t Acc: 100.00%\n",
-      "Step:   330\t Loss:   15.54629\t Acc: 100.00%\n",
-      "Step:   340\t Loss:   15.22699\t Acc: 100.00%\n",
-      "Step:   350\t Loss:   14.92177\t Acc: 100.00%\n",
-      "Step:   360\t Loss:   14.62963\t Acc: 100.00%\n",
-      "Step:   370\t Loss:   14.34970\t Acc: 100.00%\n",
-      "Step:   380\t Loss:   14.08119\t Acc: 100.00%\n",
-      "Step:   390\t Loss:   13.82336\t Acc: 100.00%\n",
-      "Step:   400\t Loss:   13.57556\t Acc: 100.00%\n",
-      "Step:   410\t Loss:   13.33718\t Acc: 100.00%\n",
-      "Step:   420\t Loss:   13.10766\t Acc: 100.00%\n",
-      "Step:   430\t Loss:   12.88649\t Acc: 100.00%\n",
-      "Step:   440\t Loss:   12.67321\t Acc: 100.00%\n",
-      "Step:   450\t Loss:   12.46737\t Acc: 100.00%\n",
-      "Step:   460\t Loss:   12.26859\t Acc: 100.00%\n",
-      "Step:   470\t Loss:   12.07648\t Acc: 100.00%\n",
-      "Step:   480\t Loss:   11.89070\t Acc: 100.00%\n",
-      "Step:   490\t Loss:   11.71094\t Acc: 100.00%\n",
+      "Step:     0\t Loss:  560.10718\t Acc: 41.58%\n",
+      "Step:    10\t Loss:  119.73383\t Acc: 81.19%\n",
+      "Step:    20\t Loss:   89.07839\t Acc: 85.15%\n",
+      "Step:    30\t Loss:   73.56355\t Acc: 88.12%\n",
+      "Step:    40\t Loss:   63.15818\t Acc: 92.08%\n",
+      "Step:    50\t Loss:   55.48394\t Acc: 95.05%\n",
+      "Step:    60\t Loss:   49.58410\t Acc: 97.03%\n",
+      "Step:    70\t Loss:   44.93892\t Acc: 98.02%\n",
+      "Step:    80\t Loss:   41.21234\t Acc: 98.02%\n",
+      "Step:    90\t Loss:   38.16925\t Acc: 98.02%\n",
+      "Step:   100\t Loss:   35.64078\t Acc: 98.02%\n",
+      "Step:   110\t Loss:   33.50475\t Acc: 98.02%\n",
+      "Step:   120\t Loss:   31.67242\t Acc: 98.02%\n",
+      "Step:   130\t Loss:   30.07883\t Acc: 98.02%\n",
+      "Step:   140\t Loss:   28.67602\t Acc: 98.02%\n",
+      "Step:   150\t Loss:   27.42812\t Acc: 98.02%\n",
+      "Step:   160\t Loss:   26.30792\t Acc: 98.02%\n",
+      "Step:   170\t Loss:   25.29448\t Acc: 98.02%\n",
+      "Step:   180\t Loss:   24.37143\t Acc: 98.02%\n",
+      "Step:   190\t Loss:   23.52579\t Acc: 100.00%\n",
+      "Step:   200\t Loss:   22.74713\t Acc: 100.00%\n",
+      "Step:   210\t Loss:   22.02690\t Acc: 100.00%\n",
+      "Step:   220\t Loss:   21.35809\t Acc: 100.00%\n",
+      "Step:   230\t Loss:   20.73482\t Acc: 100.00%\n",
+      "Step:   240\t Loss:   20.15213\t Acc: 100.00%\n",
+      "Step:   250\t Loss:   19.60580\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   19.09222\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   18.60826\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   18.15121\t Acc: 100.00%\n",
+      "Step:   290\t Loss:   17.71867\t Acc: 100.00%\n",
+      "Step:   300\t Loss:   17.30858\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   16.91907\t Acc: 100.00%\n",
+      "Step:   320\t Loss:   16.54851\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   16.19545\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   15.85858\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   15.53674\t Acc: 100.00%\n",
+      "Step:   360\t Loss:   15.22886\t Acc: 100.00%\n",
+      "Step:   370\t Loss:   14.93401\t Acc: 100.00%\n",
+      "Step:   380\t Loss:   14.65131\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   14.37999\t Acc: 100.00%\n",
+      "Step:   400\t Loss:   14.11933\t Acc: 100.00%\n",
+      "Step:   410\t Loss:   13.86868\t Acc: 100.00%\n",
+      "Step:   420\t Loss:   13.62744\t Acc: 100.00%\n",
+      "Step:   430\t Loss:   13.39507\t Acc: 100.00%\n",
+      "Step:   440\t Loss:   13.17105\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   12.95494\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   12.74628\t Acc: 100.00%\n",
+      "Step:   470\t Loss:   12.54470\t Acc: 100.00%\n",
+      "Step:   480\t Loss:   12.34981\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   12.16128\t Acc: 100.00%\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 3\t True y: 3\n",
@@ -561,7 +572,7 @@
        "'\\nOutput Example\\n\\nStep:     0      Loss:  453.74799        Acc: 38.61%\\nStep:    20      Loss:   95.05664        Acc: 88.12%\\nStep:    40      Loss:   66.43570        Acc: 93.07%\\nStep:    60      Loss:   53.09288        Acc: 94.06%\\n...\\nStep:   290      Loss:   18.72972        Acc: 100.00%\\nStep:   300      Loss:   18.24953        Acc: 100.00%\\nStep:   310      Loss:   17.79592        Acc: 100.00%\\n...\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 3   True y: 3\\n[True]   Prediction: 0   True y: 0\\n...\\n'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
