--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -16,13 +16,13 @@
     "We will use the Sigmoid Cross Entropy loss function.\n",
     "This is equivalent to tf.nn.sigmoid_softmax_with_logits(logits, labels)\n",
     "\n",
-    "# [References]\n",
+    "### [References]\n",
     "> 1. [Tensorflow Document (tf.nn.sigmoid_softmax_with_logits)](https://www.tensorflow.org/api_docs/python/tf/nn/sigmoid_cross_entropy_with_logits)\n",
     "> 2. [Neural Net Backprop in one slide! by Sung Kim](https://docs.google.com/presentation/d/1_ZmtfEjLmhbuM_PqbDYMXXLAqeWN0HwuhcSKnUQZ6MM/edit#slide=id.g1ec1d04b5a_1_83)\n",
     "> 3. [Back Propagation with Tensorflow by Dan Aloni](http://blog.aloni.org/posts/backprop-with-tensorflow/)\n",
     "> 4. [Yes you should understand backprop by Andrej Karpathy](https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.cockptkn7)\n",
     "\n",
-    "# [Network Architecture]\n",
+    "### [Network Architecture]\n",
     "\n",
     ">\\begin{aligned} \n",
     "   Input: x  \\\\\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -330,12 +330,13 @@
    "metadata": {},
    "source": [
     "# Back prop (chain rule)\n",
-    "## How to derive? please read \"Neural Net Backprop in one slide!\""
+    "> How to derive? \n",
+    "<br/>please read \"Neural Net Backprop in one slide!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -406,63 +407,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:     0\t Loss:  560.10718\t Acc: 41.58%\n",
-      "Step:    10\t Loss:  119.73383\t Acc: 81.19%\n",
-      "Step:    20\t Loss:   89.07839\t Acc: 85.15%\n",
-      "Step:    30\t Loss:   73.56355\t Acc: 88.12%\n",
-      "Step:    40\t Loss:   63.15818\t Acc: 92.08%\n",
-      "Step:    50\t Loss:   55.48394\t Acc: 95.05%\n",
-      "Step:    60\t Loss:   49.58410\t Acc: 97.03%\n",
-      "Step:    70\t Loss:   44.93892\t Acc: 98.02%\n",
-      "Step:    80\t Loss:   41.21234\t Acc: 98.02%\n",
-      "Step:    90\t Loss:   38.16925\t Acc: 98.02%\n",
-      "Step:   100\t Loss:   35.64078\t Acc: 98.02%\n",
-      "Step:   110\t Loss:   33.50475\t Acc: 98.02%\n",
-      "Step:   120\t Loss:   31.67242\t Acc: 98.02%\n",
-      "Step:   130\t Loss:   30.07883\t Acc: 98.02%\n",
-      "Step:   140\t Loss:   28.67602\t Acc: 98.02%\n",
-      "Step:   150\t Loss:   27.42812\t Acc: 98.02%\n",
-      "Step:   160\t Loss:   26.30792\t Acc: 98.02%\n",
-      "Step:   170\t Loss:   25.29448\t Acc: 98.02%\n",
-      "Step:   180\t Loss:   24.37143\t Acc: 98.02%\n",
-      "Step:   190\t Loss:   23.52579\t Acc: 100.00%\n",
-      "Step:   200\t Loss:   22.74713\t Acc: 100.00%\n",
-      "Step:   210\t Loss:   22.02690\t Acc: 100.00%\n",
-      "Step:   220\t Loss:   21.35809\t Acc: 100.00%\n",
-      "Step:   230\t Loss:   20.73482\t Acc: 100.00%\n",
-      "Step:   240\t Loss:   20.15213\t Acc: 100.00%\n",
-      "Step:   250\t Loss:   19.60580\t Acc: 100.00%\n",
-      "Step:   260\t Loss:   19.09222\t Acc: 100.00%\n",
-      "Step:   270\t Loss:   18.60826\t Acc: 100.00%\n",
-      "Step:   280\t Loss:   18.15121\t Acc: 100.00%\n",
-      "Step:   290\t Loss:   17.71867\t Acc: 100.00%\n",
-      "Step:   300\t Loss:   17.30858\t Acc: 100.00%\n",
-      "Step:   310\t Loss:   16.91907\t Acc: 100.00%\n",
-      "Step:   320\t Loss:   16.54851\t Acc: 100.00%\n",
-      "Step:   330\t Loss:   16.19545\t Acc: 100.00%\n",
-      "Step:   340\t Loss:   15.85858\t Acc: 100.00%\n",
-      "Step:   350\t Loss:   15.53674\t Acc: 100.00%\n",
-      "Step:   360\t Loss:   15.22886\t Acc: 100.00%\n",
-      "Step:   370\t Loss:   14.93401\t Acc: 100.00%\n",
-      "Step:   380\t Loss:   14.65131\t Acc: 100.00%\n",
-      "Step:   390\t Loss:   14.37999\t Acc: 100.00%\n",
-      "Step:   400\t Loss:   14.11933\t Acc: 100.00%\n",
-      "Step:   410\t Loss:   13.86868\t Acc: 100.00%\n",
-      "Step:   420\t Loss:   13.62744\t Acc: 100.00%\n",
-      "Step:   430\t Loss:   13.39507\t Acc: 100.00%\n",
-      "Step:   440\t Loss:   13.17105\t Acc: 100.00%\n",
-      "Step:   450\t Loss:   12.95494\t Acc: 100.00%\n",
-      "Step:   460\t Loss:   12.74628\t Acc: 100.00%\n",
-      "Step:   470\t Loss:   12.54470\t Acc: 100.00%\n",
-      "Step:   480\t Loss:   12.34981\t Acc: 100.00%\n",
-      "Step:   490\t Loss:   12.16128\t Acc: 100.00%\n",
+      "Step:     0\t Loss:  453.74802\t Acc: 38.61%\n",
+      "Step:    10\t Loss:  135.79250\t Acc: 83.17%\n",
+      "Step:    20\t Loss:   95.05664\t Acc: 88.12%\n",
+      "Step:    30\t Loss:   77.29308\t Acc: 91.09%\n",
+      "Step:    40\t Loss:   66.43569\t Acc: 93.07%\n",
+      "Step:    50\t Loss:   58.81989\t Acc: 94.06%\n",
+      "Step:    60\t Loss:   53.09288\t Acc: 94.06%\n",
+      "Step:    70\t Loss:   48.58739\t Acc: 96.04%\n",
+      "Step:    80\t Loss:   44.92377\t Acc: 96.04%\n",
+      "Step:    90\t Loss:   41.86683\t Acc: 97.03%\n",
+      "Step:   100\t Loss:   39.26265\t Acc: 97.03%\n",
+      "Step:   110\t Loss:   37.00650\t Acc: 97.03%\n",
+      "Step:   120\t Loss:   35.02472\t Acc: 97.03%\n",
+      "Step:   130\t Loss:   33.26402\t Acc: 97.03%\n",
+      "Step:   140\t Loss:   31.68491\t Acc: 97.03%\n",
+      "Step:   150\t Loss:   30.25749\t Acc: 97.03%\n",
+      "Step:   160\t Loss:   28.95874\t Acc: 97.03%\n",
+      "Step:   170\t Loss:   27.77063\t Acc: 97.03%\n",
+      "Step:   180\t Loss:   26.67879\t Acc: 97.03%\n",
+      "Step:   190\t Loss:   25.67165\t Acc: 97.03%\n",
+      "Step:   200\t Loss:   24.73972\t Acc: 98.02%\n",
+      "Step:   210\t Loss:   23.87506\t Acc: 98.02%\n",
+      "Step:   220\t Loss:   23.07096\t Acc: 98.02%\n",
+      "Step:   230\t Loss:   22.32164\t Acc: 98.02%\n",
+      "Step:   240\t Loss:   21.62208\t Acc: 100.00%\n",
+      "Step:   250\t Loss:   20.96780\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   20.35482\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   19.77958\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   19.23885\t Acc: 100.00%\n",
+      "Step:   290\t Loss:   18.72972\t Acc: 100.00%\n",
+      "Step:   300\t Loss:   18.24953\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   17.79592\t Acc: 100.00%\n",
+      "Step:   320\t Loss:   17.36671\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   16.95996\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   16.57392\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   16.20697\t Acc: 100.00%\n",
+      "Step:   360\t Loss:   15.85770\t Acc: 100.00%\n",
+      "Step:   370\t Loss:   15.52480\t Acc: 100.00%\n",
+      "Step:   380\t Loss:   15.20708\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   14.90350\t Acc: 100.00%\n",
+      "Step:   400\t Loss:   14.61307\t Acc: 100.00%\n",
+      "Step:   410\t Loss:   14.33491\t Acc: 100.00%\n",
+      "Step:   420\t Loss:   14.06823\t Acc: 100.00%\n",
+      "Step:   430\t Loss:   13.81229\t Acc: 100.00%\n",
+      "Step:   440\t Loss:   13.56642\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   13.33002\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   13.10251\t Acc: 100.00%\n",
+      "Step:   470\t Loss:   12.88337\t Acc: 100.00%\n",
+      "Step:   480\t Loss:   12.67214\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   12.46836\t Acc: 100.00%\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 3\t True y: 3\n",
@@ -572,7 +573,7 @@
        "'\\nOutput Example\\n\\nStep:     0      Loss:  453.74799        Acc: 38.61%\\nStep:    20      Loss:   95.05664        Acc: 88.12%\\nStep:    40      Loss:   66.43570        Acc: 93.07%\\nStep:    60      Loss:   53.09288        Acc: 94.06%\\n...\\nStep:   290      Loss:   18.72972        Acc: 100.00%\\nStep:   300      Loss:   18.24953        Acc: 100.00%\\nStep:   310      Loss:   17.79592        Acc: 100.00%\\n...\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 3   True y: 3\\n[True]   Prediction: 0   True y: 0\\n...\\n'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
