--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -24,21 +24,21 @@
     "\n",
     "### [Network Architecture]\n",
     "\n",
-    ">\\begin{aligned} \n",
+    ">\\begin{align*} \n",
     "   Input: x  \\\\\n",
-    "   \\end{aligned}\n",
-    "   \\begin{aligned}\n",
+    "   \\end{align*}\n",
+    "   \\begin{align*}\n",
     "      Layer1: {x}{W} + b \\\\\n",
-    "   \\end{aligned}\n",
-    "   \\begin{aligned}\n",
+    "   \\end{align*}\n",
+    "   \\begin{align*}\n",
     "      Output\\:layer = {\\sigma}{(Layer1)} \\\\\n",
-    "   \\end{aligned}\n",
-    "   \\begin{aligned}\n",
+    "   \\end{align*}\n",
+    "   \\begin{align*}\n",
     "      Loss\\_i &= - y * log(\\sigma(Layer1)) - (1 - y) * log(1 - {\\sigma}{(Layer1)}) \\\\\n",
-    "   \\end{aligned}\n",
-    "   \\begin{aligned}\n",
+    "   \\end{align*}\n",
+    "   \\begin{align*}\n",
     "      Loss &= tf.reduce\\_sum(Loss\\_i)\n",
-    "   \\end{aligned}\n",
+    "   \\end{align*}\n",
     "  \n",
     "  \n",
     "\n",
