--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -24,21 +24,12 @@
     "\n",
     "### [Network Architecture]\n",
     "\n",
-    ">\\begin{align*} \n",
-    "   Input: x  \\\\\n",
-    "   \\end{align*}\n",
-    "   \\begin{align*}\n",
-    "      Layer1: {x}{W} + b \\\\\n",
-    "   \\end{align*}\n",
-    "   \\begin{align*}\n",
-    "      Output\\:layer = {\\sigma}{(Layer1)} \\\\\n",
-    "   \\end{align*}\n",
-    "   \\begin{align*}\n",
-    "      Loss\\_i &= - y * log(\\sigma(Layer1)) - (1 - y) * log(1 - {\\sigma}{(Layer1)}) \\\\\n",
-    "   \\end{align*}\n",
-    "   \\begin{align*}\n",
-    "      Loss &= tf.reduce\\_sum(Loss\\_i)\n",
-    "   \\end{align*}\n",
+    ">\\begin{aligned}Input: x  \\\\\n",
+    "    Layer1: {x}{W} + b \\\\\n",
+    "    Output\\:layer = {\\sigma}{(Layer1)} \\\\\n",
+    "    Loss\\_i &= - y * log(\\sigma(Layer1)) - (1 - y) * log(1 - {\\sigma}{(Layer1)}) \\\\\n",
+    "    Loss &= tf.reduce\\_sum(Loss\\_i)\n",
+    "\\end{aligned}\n",
     "  \n",
     "  \n",
     "\n",
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -223,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -249,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -292,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -313,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -336,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -361,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -407,63 +398,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:     0\t Loss:  453.74802\t Acc: 38.61%\n",
-      "Step:    10\t Loss:  135.79250\t Acc: 83.17%\n",
-      "Step:    20\t Loss:   95.05664\t Acc: 88.12%\n",
-      "Step:    30\t Loss:   77.29308\t Acc: 91.09%\n",
-      "Step:    40\t Loss:   66.43569\t Acc: 93.07%\n",
-      "Step:    50\t Loss:   58.81989\t Acc: 94.06%\n",
-      "Step:    60\t Loss:   53.09288\t Acc: 94.06%\n",
-      "Step:    70\t Loss:   48.58739\t Acc: 96.04%\n",
-      "Step:    80\t Loss:   44.92377\t Acc: 96.04%\n",
-      "Step:    90\t Loss:   41.86683\t Acc: 97.03%\n",
-      "Step:   100\t Loss:   39.26265\t Acc: 97.03%\n",
-      "Step:   110\t Loss:   37.00650\t Acc: 97.03%\n",
-      "Step:   120\t Loss:   35.02472\t Acc: 97.03%\n",
-      "Step:   130\t Loss:   33.26402\t Acc: 97.03%\n",
-      "Step:   140\t Loss:   31.68491\t Acc: 97.03%\n",
-      "Step:   150\t Loss:   30.25749\t Acc: 97.03%\n",
-      "Step:   160\t Loss:   28.95874\t Acc: 97.03%\n",
-      "Step:   170\t Loss:   27.77063\t Acc: 97.03%\n",
-      "Step:   180\t Loss:   26.67879\t Acc: 97.03%\n",
-      "Step:   190\t Loss:   25.67165\t Acc: 97.03%\n",
-      "Step:   200\t Loss:   24.73972\t Acc: 98.02%\n",
-      "Step:   210\t Loss:   23.87506\t Acc: 98.02%\n",
-      "Step:   220\t Loss:   23.07096\t Acc: 98.02%\n",
-      "Step:   230\t Loss:   22.32164\t Acc: 98.02%\n",
-      "Step:   240\t Loss:   21.62208\t Acc: 100.00%\n",
-      "Step:   250\t Loss:   20.96780\t Acc: 100.00%\n",
-      "Step:   260\t Loss:   20.35482\t Acc: 100.00%\n",
-      "Step:   270\t Loss:   19.77958\t Acc: 100.00%\n",
-      "Step:   280\t Loss:   19.23885\t Acc: 100.00%\n",
-      "Step:   290\t Loss:   18.72972\t Acc: 100.00%\n",
-      "Step:   300\t Loss:   18.24953\t Acc: 100.00%\n",
-      "Step:   310\t Loss:   17.79592\t Acc: 100.00%\n",
-      "Step:   320\t Loss:   17.36671\t Acc: 100.00%\n",
-      "Step:   330\t Loss:   16.95996\t Acc: 100.00%\n",
-      "Step:   340\t Loss:   16.57392\t Acc: 100.00%\n",
-      "Step:   350\t Loss:   16.20697\t Acc: 100.00%\n",
-      "Step:   360\t Loss:   15.85770\t Acc: 100.00%\n",
-      "Step:   370\t Loss:   15.52480\t Acc: 100.00%\n",
-      "Step:   380\t Loss:   15.20708\t Acc: 100.00%\n",
-      "Step:   390\t Loss:   14.90350\t Acc: 100.00%\n",
-      "Step:   400\t Loss:   14.61307\t Acc: 100.00%\n",
-      "Step:   410\t Loss:   14.33491\t Acc: 100.00%\n",
-      "Step:   420\t Loss:   14.06823\t Acc: 100.00%\n",
-      "Step:   430\t Loss:   13.81229\t Acc: 100.00%\n",
-      "Step:   440\t Loss:   13.56642\t Acc: 100.00%\n",
-      "Step:   450\t Loss:   13.33002\t Acc: 100.00%\n",
-      "Step:   460\t Loss:   13.10251\t Acc: 100.00%\n",
-      "Step:   470\t Loss:   12.88337\t Acc: 100.00%\n",
-      "Step:   480\t Loss:   12.67214\t Acc: 100.00%\n",
-      "Step:   490\t Loss:   12.46836\t Acc: 100.00%\n",
+      "Step:     0\t Loss:  434.12061\t Acc: 35.64%\n",
+      "Step:    10\t Loss:  122.06409\t Acc: 84.16%\n",
+      "Step:    20\t Loss:   85.94774\t Acc: 86.14%\n",
+      "Step:    30\t Loss:   70.19664\t Acc: 88.12%\n",
+      "Step:    40\t Loss:   60.02964\t Acc: 90.10%\n",
+      "Step:    50\t Loss:   52.76192\t Acc: 93.07%\n",
+      "Step:    60\t Loss:   47.31219\t Acc: 94.06%\n",
+      "Step:    70\t Loss:   43.08557\t Acc: 95.05%\n",
+      "Step:    80\t Loss:   39.71006\t Acc: 97.03%\n",
+      "Step:    90\t Loss:   36.94410\t Acc: 97.03%\n",
+      "Step:   100\t Loss:   34.62762\t Acc: 97.03%\n",
+      "Step:   110\t Loss:   32.65193\t Acc: 99.01%\n",
+      "Step:   120\t Loss:   30.94109\t Acc: 99.01%\n",
+      "Step:   130\t Loss:   29.44057\t Acc: 99.01%\n",
+      "Step:   140\t Loss:   28.11025\t Acc: 99.01%\n",
+      "Step:   150\t Loss:   26.91994\t Acc: 99.01%\n",
+      "Step:   160\t Loss:   25.84645\t Acc: 99.01%\n",
+      "Step:   170\t Loss:   24.87170\t Acc: 99.01%\n",
+      "Step:   180\t Loss:   23.98131\t Acc: 99.01%\n",
+      "Step:   190\t Loss:   23.16373\t Acc: 99.01%\n",
+      "Step:   200\t Loss:   22.40954\t Acc: 99.01%\n",
+      "Step:   210\t Loss:   21.71097\t Acc: 99.01%\n",
+      "Step:   220\t Loss:   21.06155\t Acc: 100.00%\n",
+      "Step:   230\t Loss:   20.45581\t Acc: 100.00%\n",
+      "Step:   240\t Loss:   19.88914\t Acc: 100.00%\n",
+      "Step:   250\t Loss:   19.35758\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   18.85771\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   18.38656\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   17.94155\t Acc: 100.00%\n",
+      "Step:   290\t Loss:   17.52041\t Acc: 100.00%\n",
+      "Step:   300\t Loss:   17.12114\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   16.74195\t Acc: 100.00%\n",
+      "Step:   320\t Loss:   16.38125\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   16.03765\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   15.70988\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   15.39678\t Acc: 100.00%\n",
+      "Step:   360\t Loss:   15.09734\t Acc: 100.00%\n",
+      "Step:   370\t Loss:   14.81061\t Acc: 100.00%\n",
+      "Step:   380\t Loss:   14.53576\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   14.27201\t Acc: 100.00%\n",
+      "Step:   400\t Loss:   14.01865\t Acc: 100.00%\n",
+      "Step:   410\t Loss:   13.77506\t Acc: 100.00%\n",
+      "Step:   420\t Loss:   13.54063\t Acc: 100.00%\n",
+      "Step:   430\t Loss:   13.31483\t Acc: 100.00%\n",
+      "Step:   440\t Loss:   13.09717\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   12.88717\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   12.68443\t Acc: 100.00%\n",
+      "Step:   470\t Loss:   12.48854\t Acc: 100.00%\n",
+      "Step:   480\t Loss:   12.29915\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   12.11592\t Acc: 100.00%\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 3\t True y: 3\n",
@@ -573,7 +564,7 @@
        "'\\nOutput Example\\n\\nStep:     0      Loss:  453.74799        Acc: 38.61%\\nStep:    20      Loss:   95.05664        Acc: 88.12%\\nStep:    40      Loss:   66.43570        Acc: 93.07%\\nStep:    60      Loss:   53.09288        Acc: 94.06%\\n...\\nStep:   290      Loss:   18.72972        Acc: 100.00%\\nStep:   300      Loss:   18.24953        Acc: 100.00%\\nStep:   310      Loss:   17.79592        Acc: 100.00%\\n...\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 3   True y: 3\\n[True]   Prediction: 0   True y: 0\\n...\\n'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
